Fixing spacing issue and removed repeated sentense from fundraiser campaign

--- a/src/styles/fundraiser.scss
+++ b/src/styles/fundraiser.scss
@@ -180,8 +180,9 @@
 
     .about {
         height: fit-content;
-        padding: 0 5%;
+        padding: 0 38px;
         scroll-behavior: auto;
+        margin-top: -35px;
         background: #F7F9FA 0% 0% no-repeat padding-box;
         border: 1px solid #707070;
         opacity: 1;
@@ -192,6 +193,7 @@
             letter-spacing: 0px;
             color: #144B5E;
             opacity: 1;
+            text-align: justify;
         }
 
         @media (max-width: 600px) {
